# snake_pygame

./: .editorconfig  .gitignore  README.md  pyproject.toml
app/: main.py
app/game/: app.py  config.py
app/sprites/: game_object.py  player.py  tail.py
